--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.23.1",
     "boxicons": "^2.1.4",
     "core-js": "^3.8.3",
+    "lodash": "^4.17.21",
     "router": "^1.3.8",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
